--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -20,7 +20,6 @@ header {
     color: #3C354F;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-    /* padding: 30px 100px 30px 100px; */
     padding: 50px 0px 50px 200px;
 
 }
@@ -54,4 +53,27 @@ nav a {
 .follow-us {
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
+}
+
+
+
+/* style for responsive starts */
+/* style for mobile device */
+@media screen and (max-width:576px) {
+    header{
+        padding:90px 50px 30px 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    nav div{
+        margin-bottom: 30px;
+    }
+    nav ul{
+        flex-direction: column;
+
+    }
+    nav li {
+        margin-bottom: 30px;
+    }
 }
