header responsive for tablet

--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -20,7 +20,7 @@ header {
     color: #3C354F;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-    padding: 50px 0px 50px 200px;
+    padding: 50px 0px 50px 120px;
 
 }
 
@@ -75,5 +75,18 @@ nav a {
     }
     nav li {
         margin-bottom: 30px;
+    }
+}
+
+/* Responsive styles for tablet */
+@media screen and (min-width:576px) and (max-width:960px) {
+    header{
+        padding: 50px 0px 50px 0px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    nav ul{
+        margin-top: 30px;
     }
 }
