--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -9,6 +9,8 @@ body {
     font-family: 'Work Sans', sans-serif;
 }
 
+.btn-primary {}
+
 .section-title {
     text-align: center;
     font-size: 3rem;
@@ -55,24 +57,44 @@ nav a {
     background: rgba(11, 2, 35, 0.10);
 }
 
+/* styles for banner */
+.banner{
+    /* padding-right: 50px; */
+    margin: 30px 0px;
 
-
+}
+.banner-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:20px;
+    min-height: 700px;
+}
+.banner-container-col-1{
+    background-image: url('../images/Group\ 14.png');
+}
+.banner-container-col-2{
+    background-image: url('../images/Group\ 18.png');
+}
 /* style for responsive starts */
 /* style for mobile device */
 @media screen and (max-width:576px) {
-    header{
-        padding:90px 50px 30px 50px;
+    header {
+        padding: 90px 50px 30px 50px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
     }
-    nav div{
+
+    nav div {
         margin-bottom: 30px;
     }
-    nav ul{
+
+    nav ul {
         flex-direction: column;
 
     }
+
     nav li {
         margin-bottom: 30px;
     }
@@ -80,13 +102,15 @@ nav a {
 
 /* Responsive styles for tablet */
 @media screen and (min-width:576px) and (max-width:960px) {
-    header{
+    header {
         padding: 50px 0px 50px 0px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
     }
-    nav ul{
+
+    nav ul {
         margin-top: 30px;
     }
 }
