--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -22,7 +22,7 @@ header {
     color: #3C354F;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-    padding: 50px 0px 50px 120px;
+    padding: 50px 100px;
 
 }
 
@@ -58,23 +58,21 @@ nav a {
 }
 
 /* styles for banner */
-.banner{
-    /* padding-right: 50px; */
-    margin: 30px 0px;
-
+.banner-container-col-2 img{
+    height: auto;
+    width: 70%;
 }
 .banner-container{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap:20px;
-    min-height: 700px;
+    grid-template-columns: 40% 60%;
+    gap:10px;
+    min-height: 500px;
 }
 .banner-container-col-1{
     background-image: url('../images/Group\ 14.png');
 }
-.banner-container-col-2{
-    background-image: url('../images/Group\ 18.png');
-}
+
+
 /* style for responsive starts */
 /* style for mobile device */
 @media screen and (max-width:576px) {
