--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -335,34 +335,33 @@ footer .section-description {
     }
     footer {
         background: #0B0223;
-        padding: 20px 20px;
+        padding: 40px;
     }
 
     .optoin-class {
         grid-template-columns: repeat(3, 1fr);
-        /* padding:40px; */
 
     }
     option{
-        margin: 0 20px;
-        margin-bottom: 30px;
+        margin: 10px 10px;
     }
     .btn {
-        margin: 0 90px 0 90px;
-        padding: 10px;
-        display: grid;
+        margin:30px 60px;
+        padding: 5px;
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
     }
+    .footer-description {
+        font-size: .5rem;
+        margin: 0px 40px;
+    }
     .upper-part{
         grid-template-columns: repeat(2, 1fr);
+        margin: 15px 25px;
     }
     .footer-last{
         /* margin:10px 0; */
-        padding: 20px;
-    }
-    footer {
-        padding: 20px;
+        padding: 10px;
     }
 
 }
@@ -386,10 +385,6 @@ footer .section-description {
         min-height: 500px;
         margin: 20px 80px;
     }
-
-    /* .banner-descripton-container {
-        padding: 20px 130px;
-    } */
 
     .online-games-container {
         padding: 50px 40px 50px 20px;
@@ -424,6 +419,37 @@ footer .section-description {
     .play-games-col-2 {
         margin-top: 10px;
         margin-left: 10px;
+    }
+    footer {
+        background: #0B0223;
+        padding: 40px;
+    }
+
+    .optoin-class {
+        grid-template-columns: repeat(3, 1fr);
+        margin-left: 80px;
+
+    }
+    option{
+        margin: 10px 10px;
+    }
+    .btn {
+        margin:30px 200px;
+        padding: 5px;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+    .footer-description {
+        font-size: .5rem;
+        margin: 0px 40px;
+    }
+    .upper-part{
+        grid-template-columns: repeat(2, 1fr);
+        margin: 15px 25px;
+    }
+    .footer-last{
+        /* margin:10px 0; */
+        padding: 10px;
     }
 
 }
