icon button addess

--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -122,9 +122,11 @@ nav a {
     font-weight: 500;
 
 }
-.btn-banner{
+
+.btn-banner {
     margin-top: 30px;
 }
+
 .go-rougue {
     background: #4EC5F7;
 }
@@ -205,7 +207,43 @@ nav a {
     margin-left: 100px;
 }
 
-/* style for footer */  /* style for footer */  /* style for footer */ /* style for footer */
+/* icon-button styles icon-button styles icon-button styles icon-button styles icon-button */
+
+.icon-button {
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.1) 50%, rgba(255, 66, 165, 0.1) 50%);
+}
+
+.icon-button-container {
+    margin: 50px 100px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.grid-item-6 {
+    margin-left: 100px;
+}
+
+.icon-and-text {
+    width: 250px;
+    height: 80px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.icon-text-flex {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+
+
+
+/* style for footer */
+/* style for footer */
+/* style for footer */
+/* style for footer */
 
 footer {
     background: #0B0223;
@@ -244,7 +282,8 @@ footer .section-description {
     font-weight: 500;
     margin: 0px 70px;
 }
-.upper-part{
+
+.upper-part {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     margin: 30px 50px;
@@ -286,16 +325,19 @@ footer .section-description {
     .banner-title {
         font-size: 1.3rem;
     }
-    .banner-goat{
+
+    .banner-goat {
         font-size: 2rem;
     }
 
     .banner-container-col-1 {
         padding: 40px;
     }
+
     .btn-primary {
         padding: 10px;
     }
+
     .banner-container-col-2 {
         padding: 50px 0px;
     }
@@ -333,6 +375,7 @@ footer .section-description {
         margin-top: 10px;
         margin-left: 10px;
     }
+
     footer {
         background: #0B0223;
         padding: 40px;
@@ -342,24 +385,29 @@ footer .section-description {
         grid-template-columns: repeat(3, 1fr);
 
     }
-    option{
+
+    option {
         margin: 10px 10px;
     }
+
     .btn {
-        margin:30px 60px;
+        margin: 30px 60px;
         padding: 5px;
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
     }
+
     .footer-description {
         font-size: .5rem;
         margin: 0px 40px;
     }
-    .upper-part{
+
+    .upper-part {
         grid-template-columns: repeat(2, 1fr);
         margin: 15px 25px;
     }
-    .footer-last{
+
+    .footer-last {
         /* margin:10px 0; */
         padding: 10px;
     }
@@ -420,6 +468,7 @@ footer .section-description {
         margin-top: 10px;
         margin-left: 10px;
     }
+
     footer {
         background: #0B0223;
         padding: 40px;
@@ -430,24 +479,29 @@ footer .section-description {
         margin-left: 80px;
 
     }
-    option{
+
+    option {
         margin: 10px 10px;
     }
+
     .btn {
-        margin:30px 200px;
+        margin: 30px 200px;
         padding: 5px;
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
     }
+
     .footer-description {
         font-size: .5rem;
         margin: 0px 40px;
     }
-    .upper-part{
+
+    .upper-part {
         grid-template-columns: repeat(2, 1fr);
         margin: 15px 25px;
     }
-    .footer-last{
+
+    .footer-last {
         /* margin:10px 0; */
         padding: 10px;
     }
