--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -214,7 +214,7 @@ nav a {
 }
 
 .icon-button-container {
-    margin: 50px 100px;
+    margin: 0px 100px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
 }
@@ -251,6 +251,9 @@ nav a {
     max-height: 60px;
 }
 
+.icon-button .section-description {
+    font-size: .9rem;
+}
 /* style for footer  style for footer  style for footer style for footer */
 
 footer {
@@ -383,16 +386,24 @@ footer .section-description {
         margin-top: 10px;
         margin-left: 10px;
     }
-
+    .icon-button img{
+        width: 25%;
+    }
     .icon-button-container {
-        margin: 30px 10px;
-        gap:3px;
+        margin: 30px 60px;
+        gap:2px;
         grid-template-columns: repeat(3, 1fr);
     }
 
     .icon-text-flex {
-        max-width: 100px;
-        max-height: 50px;
+        justify-content:space-around;
+        align-items: center;
+        max-width: 125px;
+        max-height: auto;
+    }
+
+    .icon-button .section-description {
+        font-size: .5rem;
     }
 
     footer {
