--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -215,8 +215,10 @@ nav a {
 
 .icon-button-container {
     margin: 0px 100px;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    max-width: 1150px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .icon-and-text {
@@ -250,6 +252,7 @@ nav a {
     max-width: 200px;
     max-height: 60px;
 }
+
 
 .icon-button .section-description {
     font-size: .9rem;
@@ -389,17 +392,19 @@ footer .section-description {
     .icon-button img{
         width: 25%;
     }
+
     .icon-button-container {
-        margin: 0px 60px;
-        gap:2px;
+        margin: 0px 50px;
+        display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
 
     .icon-text-flex {
         justify-content:space-around;
         align-items: center;
-        max-width: 125px;
-        max-height: auto;
+        max-width: 80px;
+        /* max-width: 125px;
+        max-height: auto; */
     }
 
     .icon-button .section-description {
