--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -163,12 +163,46 @@ nav a {
     gap: 5px;
     padding: 50px 100px;
 }
-
-.card-container img {
+.image-container img{
     width: 100%;
 }
-
-
+.image-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    cursor: pointer;
+    transition: opacity 0.3s ease;
+    border: 2px solid rgb(46, 13, 230);
+    border-radius: 5px;
+  }
+  
+  .play-button {
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  
+  .watch-now {
+    color: red;
+  }
+  
+  .image-container:hover .overlay {
+    opacity: 1;
+  }
+  
 /* styles for play games */
 /* styles for play games */
 /* styles for play games */
@@ -357,10 +391,16 @@ footer .section-description {
     }
 
     .card-container {
-        grid-template-columns: repeat(2, 1fr);
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
         gap: 5px;
         padding: 50px 50px;
     }
+    /* .card-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 5px;
+        padding: 50px 50px;
+    } */
 
     .online-games-description {
         padding: 20px 50px 20px 60px;
